interpreter/tests/golden-files/block-comment.golden.enzo
//= BLOCK COMMENT: BASIC FUNCTIONALITY
1

//= BLOCK COMMENT: MULTILINE USAGE
2

//= BLOCK COMMENT: COMMENTING OUT CODE
3

//= BLOCK COMMENT: INLINE BETWEEN CODE
4

//= BLOCK COMMENT: EMPTY COMMENT
5

//= BLOCK COMMENT: SPECIAL CHARACTERS AND SYNTAX
6

//= BLOCK COMMENT: NO NESTING
"and this text is not in a comment.'/"

//= BLOCK COMMENT: ERROR ON UNTERMINATED COMMENT
error: unclosed block comment
	/' This is an open comment that never closes. // error: unclosed block comment